Updated mod structure and updated game version